# mag_10_monitor

./: .gitignore  AGENTS.md  ARC.md  README.md
dashboard/: .env.example  Dockerfile  README.md  pyproject.toml  queries.py  streamlit_app.py
dashboard/queries/: momentum_board.sql  sector_heatmap.sql  volatility_spike.sql  volume_spotter.sql
detection/: .dockerignore  .env.example  config.py  main.py  publisher.py  pyproject.toml  warm_start.py
detection/detectors/: momentum.py  sector.py  volatility.py
functions/archive/: main.py  pyproject.toml  requirements.txt
functions/gcs_to_bq/: main.py  pyproject.toml  requirements.txt
functions/momentum/: main.py  pyproject.toml  requirements.txt
functions/sector/: main.py  pyproject.toml  requirements.txt
functions/shared/: bq_client.py  models.py
functions/volatility/: main.py  pyproject.toml  requirements.txt
functions/volume/: main.py  pyproject.toml  requirements.txt
infra/: main.tf  outputs.tf  variables.tf
infra/modules/bigquery/: main.tf  outputs.tf  variables.tf
listener/: .env.example  Dockerfile  config.py  main.py  publisher.py  pyproject.toml
listener/detectors/: base.py  volume.py
scripts/: deploy.sh  deploy_functions.sh
spec/: data-sources.md  overview.md
spec/dashboard/: boards.md  plotly-specs.md
spec/detectors/: momentum.md  sector.md  volatility.md  volume.md
spec/infra/: resources.md
spec/pipeline/: bigquery.md  bronze.md  functions.md  listener.md  pubsub.md
websocket/: .env.example  Dockerfile  config.py  main.py  publisher.py  pyproject.toml
(+13 files in other folders)
