[project]
name = "dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.32.0",
    "plotly>=5.18.0",
    "pandas>=2.1.4",
    "google-cloud-bigquery>=3.14.1",
    "google-cloud-bigquery-storage>=2.24.0",
    "db-dtypes>=1.2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]
