[project]
name = "mag10-detection"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-pubsub>=2.21.0",
    "google-cloud-storage>=2.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["detectors"]
