[project]
name = "mag10-listener"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "websockets>=13.0",
    "google-cloud-pubsub>=2.21.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["detectors"]
